탭 focus 색상 조정
#0078d7 -> #21BF48
청색 계통에서 녹색 계통으로 변경
로고와 같은 색상

--- a/css/login.css
+++ b/css/login.css
@@ -68,7 +68,7 @@
     color: #767676;
 }
 .tab-content input:focus {
-    border-bottom: 1px solid #0078d7;
+    border-bottom: 1px solid #21BF48;
 }
 .tab-content input #user-id {
     font-weight: 500;
