--- a/css/layout.css
+++ b/css/layout.css
@@ -224,9 +224,9 @@ footer {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center; /* 수평 중앙 정렬 유지 */
-    align-items: flex-start; /* 수직 정렬을 상단으로 변경 */
+    display: none;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content {
